compiler/testData/diagnostics/testsWithExplicitApi/companionObject.kt
// SKIP_TXT

public class Bar {
    <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>companion object<!> {}
}

public class Bar2 {
    <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>companion object MyCompanion<!> {}
}

public class Bar3 {
    <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>object NestedObject<!> {}
}